2008-03-18  Sam Steingold  <sds@gnu.org>

	* stream.d (push_ch): extracted from read_line
	(read_line): use it
	* spvw_debug (nobject_out1): handle arrays

2008-03-18  Sam Steingold  <sds@gnu.org>

	* makemake.in, lispbibl.d: USE_JITC requires HEAPCODES

2008-03-18  Drutsa Pavel  <rawlik@users.sourceforge.net>

	fix bug [ 1918017 ]: new-clx:gcontext-clip-mask does not set rectangles
	* modules/clx/new-clx/clx.f (XLIB:SET-GCONTEXT-CLIP-MASK): do not
	divide n by 4 when passing to XSetClipRectangles - it has already
	been done by get_seq_len()

2008-03-17  Sam Steingold  <sds@gnu.org>

	* lightning.c (jit_compile_): restore the semantics of byteptr_min
	as in interpret_bytecode_() (fixes --with-debug compilation)

2008-03-17  Sam Steingold  <sds@gnu.org>

	drop JITC objects before saving memory
	* debug.d (GC): accept optional argument to invalidate JITC objects;
	return 3 values (same as %ROOM)
	* subr.d (gc): update declaration
	* lightning.c (gc_drop_jitc): add variable
	* spvw_garcol.d (gar_col): accept level argument to invalidate
	JITC objects (when 1, set gc_drop_jitc to true)
	* lispbibl.d (gar_col): update prototype
	(gc_drop_jitc) [USE_JITC]: declare extern
	* pathname.d (SAVEMEM): pass 1 to gar_col()
	* spvw_memfile.d (savemem): pass 1 to gar_col()
	* spvw_allocate.d (make_space_gc, make_space_gc_true)
	(make_space_gc_false): pass 0 to gar_col()
	* spvw_gcmark.d (down_cclosure) [USE_JITC]: do not mark JITC when
	gc_drop_jitc is true

2008-03-17  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (DEF-C-CONST): pass NIL as version to
	FIND-FOREIGN-FUNCTION (finish patch [ 1913831 ])
	* foreign.d (foreign_library_check): when version is non-NIL,
	coerce it to simple-string
	* documentation.lisp (function-documentation): foreign-function
	properties are not in slot 6

2008-03-17  Sam Steingold  <sds@gnu.org>

	* spvw_gcmark.d (down_cclosure) [USE_JITC]: check that the
	cclosure has been already JIT-compiled before gc_mark_jitc_object()